Fully implemented memory upgrades
